--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+   <title>Isabela  Portfolio</title>
+ </head>
+ <body>
+   <nav>
+     <ul>
+       <li><a href=”/”>Home</a></li>
+       <li><a href=”/about”>About</a></li>
+       <li><a href=”/resume”>Resume</a></li>
+       <li><a href=”/blog”>Blog</a></li>
+     </ul>
+   </nav>
+   <div class=”container”>
+     <div class=”blurb”>
+       <h1>Hi, I am Isabela!</h1>
+       <p>This is my first page for my personal website!</a></p>
+     </div>
+   </div>
+   <footer>
+   <ul>
+     <li><a href=”mailto:isabeladiaspl@icloud.com”>mail</a></li>
+   </ul>
+   </footer>
+ </body>
+</html>
